pages/static/pages/style.css
body, html{
    font-family: -apple-system, 'Segoe UI', 'Helvetica Neue', Roboto, Calibri, Arial, sans-serif;
    background: #f0ede9;
    color: #1E1E36;
    padding: 0;
    text-decoration: none;
}
a{
    color: #D62F2F;
    text-decoration: underline;
    cursor: pointer;
}
header:before{
    content: '';
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    height: 0.25em;
    background: #D62F2F;
}
header{
    position: fixed;
    top: 0.250em;
    left: 0;
    right: 0;
    height: 4em;
    background: #e3e0d5;
    padding: 0;
    min-width: 30em;
    z-index: 100;
    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.33);
}
header figure{
    margin: 0;
    max-height: 100%;
}
header figure img{
    max-height: 100%;
    height: 100%;
}
header nav{
    position: fixed;
    right: 0;
    top: 0.25em;
    height: 4em;
}
header ul{
    list-style: none;
    padding: 0.5em;
    height: 3em;
    margin: 0;
    vertical-align: middle;
}
header nav ul li{
    cursor: pointer;
    display: inline-block;
    vertical-align: middle;
    margin: 0.125em 0.5em;
    transition: background 0.25s, color 0.25s;
    font-weight: bold;
}
header nav a{
    text-decoration: none;
    display: block;
    padding: 0.75em;
}
header nav ul li.selected, header nav ul li:hover{
    background: #D62F2F;
    color: #fffefc;
}
header nav ul li.selected a, header nav ul li:hover a{
    color: #fffefc;
}
.main-content{
    margin: 0.5em;
    margin-left: 1.5em;
    margin-top: 5.5em;
    display: inline-block;
    min-height: 10em;
    min-width: 24em;
    min-width: 60ch;
    max-width: 48em;
    max-width: 120ch;
    width: calc(100% - 34em);
    transition: margin 0.25s, width 0.25s;
    /*overflow: hidden;*/
}
.side-content{
    margin: 0.5em;
    margin-left: 1.5em;
    margin-top: 5.5em;
    display: inline-block;
    vertical-align: top;
    width: 29em;
}
article{
    background-color: #fffefc;
    min-height: 10em;
    width: 100%;

    margin: 0;
    margin-bottom: 2em;
    box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.44);
    border-radius: 8px;
    overflow: hidden;
}
article .article-header{
    background-size: cover;
    margin-left: -3em;
    margin-top: -3em;
    padding-left: 5em;
    margin-bottom: 2em;
    width: calc(100% - -5em);
    height: 11em;
    background-position: center;
    position: relative;
    z-index: 0;
}
article .article-header.has-background:after{
    content: '';
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 11em;
    z-index: -1;
    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0) 29%, rgba(0,0,0,0.6) 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(29%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.6)));
    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 29%,rgba(0,0,0,0.6) 100%);
    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 29%,rgba(0,0,0,0.6) 100%);
    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 29%,rgba(0,0,0,0.6) 100%);
    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 29%,rgba(0,0,0,0.6) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#99000000',GradientType=0 );
}
article .article-header h1{
    padding-top: 0.8em;
    z-index: 1;
}
article .article-header.has-background h1 a{
    color: #fffefc;
}
article .page-content{
    margin: 2em;
}
.side-content article{
    min-width: 25em;
    max-width: 25em;
    width: 25em;
    padding: 2em;
    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.24);
    transition: box-shadow 3s;
}
.side-content article:hover{
    box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.44);
}
article img{
    width: calc(100% - -4em);
    margin: 1em 0;
    margin-left: -2em;
    padding: 0;
}
h1 a{
    text-decoration: none;
    color: #1E1E36;
}
h1{
    font-weight: 100;
    font-size: 5em;
    padding: 0;
    margin: 0;
}
h2{
    font-weight: 100;
    font-size: 3em;
    padding: 0;
    margin: 0;
}
h3{
    font-weight: normal;
}
.published-date{
    font-size: 0.7em;
    font-style: italic;
    text-align: right;
    margin: 2em;
    margin-top: 4em;
    padding: 0;
}
.album-container, .album-image-container {
    display: inline-block;
    width: 12em;
    height: 8em;
    color: white;
    background-size: cover;
    background-position: center;
    font-size: 1.45em;
    margin: 0;
    padding: 0;
    text-decoration: none;
    position: relative;
    z-index: 0;
    font-weight: 100;
}
.album-container:after{
    content: ' ';
    display: block;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    z-index: -1;
    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0) 29%, rgba(0,0,0,0.6) 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(29%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.6)));
    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 29%,rgba(0,0,0,0.6) 100%);
    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 29%,rgba(0,0,0,0.6) 100%);
    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 29%,rgba(0,0,0,0.6) 100%);
    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 29%,rgba(0,0,0,0.6) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#99000000',GradientType=0 );
}
.album-container p{
    margin: 0;
    position: absolute;
    bottom: 0.5em;
    left: 0.5em;
    z-index: 1;
}
.make-default-image{
    font-size: 0.7em;
    padding: 0.5em;
    background: rgba(0,0,0,0.3);
    opacity: 0;
    transition: opacity 0.1s;
}
.album-images{
    margin: 1em 0;
    min-height: 5em;
}
.album-images.edit-mode .album-image-container:hover .make-default-image{
    opacity: 1.0;
}
.album-images.dragover{
    outline: 2px solid #1E1E36;
    position: relative;
    opacity: 0.5;
}
.uploading{
    color: #1E1E36;
}
@media only screen
and (max-width : 1175px){

    .main-content{
        margin: 0.25em;
        margin-top: 5em;
        width: calc(100% - 0.5em);
    }
    article{
        min-height: 10em;
        width: 100%;

        margin: 0;
        margin-bottom: 2em;
        box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.44);
        border-radius: 8px;
        overflow: hidden;
    }

    .side-content{
        margin: 0.5em;
        margin-top: 1em;
        display: inline-block;
        vertical-align: top;
        width: calc(100% - 2.5em);
    }
    .side-content article{
        min-width: inherit;
        max-width: inherit;
        width: inherit;
        font-size: 1em;
    }
}
/* iPad landscape */
@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) 
and (orientation : landscape) {

    .main-content{
        margin: 0.5em;
        margin-left: 0.25em;
        margin-top: 5em;
        min-width: 16em;
        min-width: 40ch;
        max-width: 48em;
        max-width: 120ch;
        width: calc(100% - 19.125em);
        /*overflow: hidden;*/
    }
    article{
        min-height: 10em;
        width: 100%;

        margin: 0;
        margin-bottom: 2em;
        box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.44);
        border-radius: 8px;
        overflow: hidden;
    }

    .side-content{
        margin: 0.5em;
        margin-left: 0.5em;
        margin-top: 5em;
        margin-right: 0;
        display: inline-block;
        vertical-align: top;
        width: 17.5em;
    }
    .side-content article{
        min-width: 25em;
        max-width: 25em;
        width: 25em;
        padding: 2em;
        font-size: 0.6em;
    }
}
/* iPad portrait */
@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) 
and (orientation : portrait) { 

    .main-content{
        margin: 0.25em;
        margin-top: 5em;
        width: calc(100% - 0.5em);
        /*overflow: hidden;*/
    }
    article{
        min-height: 10em;
        width: 100%;

        margin: 0;
        margin-bottom: 2em;
        box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.44);
        border-radius: 8px;
        overflow: hidden;
    }

    .side-content{
        margin: 0.5em;
        margin-top: 1em;
        display: inline-block;
        vertical-align: top;
        width: calc(100% - 2.5em);
    }
    .side-content article{
        min-width: inherit;
        max-width: inherit;
        width: inherit;
        font-size: 1em;
    }
}
/* Smartphones (portrait) ----------- */
@media only screen 
and (min-device-width : 320px) 
and (max-device-width : 480px)
and (orientation : portrait) {
    body{
        font-size: 2em;
    }
    article{
        width: calc(100% - 2em);
        padding: 1em;
    }
    .main-content, .side-content {
        margin-left: 0.5em;
        width: calc(100% - 1em);
    }
    .side-content{
        margin-top: 0;
    }
    .main-content article, .side-content article{
        padding: 1em;

        width: calc(100% - 2em);
    }
    article img{
        width: calc(100% - -2em);
        margin-left: -1em;
    }
    header figure, header figure img{
        width: 250px;
        margin-top: 0.55em;
        height: auto;
    }

    .album-container, .album-image-container {
        display: block;
        width: calc(100% - -2em);
        margin-left: -1em;
    }
}

